index.scss
:root {
  --blue-team: #029EF7;
  --blue-team-dark: hsl(202, 98%, 40%);
  --red-team: #FF5A64;
  --red-team-dark: hsl(356, 100%, 59%);
  --accent-color: #D8EF5E;
  --text-color: #fafafa;
  --background-color: #051c2c;
  --primary-font-family:  monospace;
  --secondary-font-family: sans-serif;
  --logo-path: url(/pages/op-themeing/active/logo.png);
}

